# stpa-agent-runtime

./: .gitignore  README.md  pyproject.toml
benchmarks/: README.md
configs/: code_experiment.example.yaml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  development.md  index.md  limitations.md  release-checklist.md  rule-compiler.md  runtime-guard.md  semantic-mapping.md  shell-runtime.md  stpa-analysis.md  testing.md  uca-model.md
docs/experiments/: code-domain.md
docs/stpa/: cua-control-loop.md
scripts/: README.md  __init__.py  build_current_eval_dataset.py  export_owner_harm_report.py  export_paper_tables.py  fetch_external_benchmarks.py  fetch_redcode.ps1  fetch_redcode.sh  generate_code_rules.py  run_agent_experiment.py  run_code_eval_suite.py  run_code_experiment.py  run_current_eval_experiments.py  run_overhead_microbench.py  run_owner_harm_eval.py  run_phase2_microbench_compare.py  run_post_audit_verifier.py  run_tpr_budgeted_ablations.py  verify_dataset.py
src/: controlled_agent_excector.py  enforcement.py  interpreter.py  rule.py  state.py
src/agentspec_codegen/: __init__.py
tests/: conftest.py
tests/e2e/: test_code_pipeline_e2e.py  test_shell_pipeline_e2e.py
tests/golden/: uca_code_001.spec
tests/integration/: test_generate_code_rules.py  test_interpreter_runtime_cache.py  test_run_agent_experiment.py  test_run_code_eval_suite.py  test_run_code_experiment.py  test_run_owner_harm_eval.py
tests/unit/: test_agentharm_adapter.py  test_build_current_eval_dataset.py  test_enforcement_noninteractive.py  test_eval_metrics.py  (+13 more)
(+24 files in other folders)
